Made corrections to message board fixing overflow

--- a/src/App.css
+++ b/src/App.css
@@ -59,7 +59,7 @@
     display: block;
     margin: 0 auto;
     width: 60%;
-    height: 60%;
+    height: 40%;
     object-fit: cover;
 }
 
